// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addresses should return kovan testnet addresses for networkId 42 1`] = `
Object {
  "B0x": "0x66c529139ea5ff2f4e758c28fed902ef78ddf798",
  "B0xOracle": "0x2f498a9cd5f8a74ed579a95a5ab47f1bf9126bfa",
  "B0xTo0x": "0x3cb5ee86adcf8fc4301354b58fde01535939a3b5",
  "B0xToken": "0x14823db576c11e4a54ca9e01ca0b28b18d3d1187",
  "B0xVault": "0xbe46529e2f3208d35027c809ff1df173b022565d",
  "EIP20": "",
  "OracleInterface": "",
  "OracleRegistry": "0x81558e6edf0f7ae1222fd56ad63cffad09dadf64",
  "TokenRegistry": "0x0dadad008647f0f7b68ffe662135cd714a56698c",
  "TokenTransferProxy": "0x4e9aad8184de8833365fea970cd9149372fdf1e6",
  "WETH": "0xc778417e063141139fce010982780140aa0cd5ab",
  "ZRXToken": "0xa8e9fa8f91e5ae138c74648c9c304f1c75003a8d",
}
`;

exports[`addresses should return local testnet addresses for all other networkIds 1`] = `
Object {
  "B0x": "0xaa86dda78e9434aca114b6676fc742a18d15a1cc",
  "B0xOracle": "0x59adefa01843c627ba5d6aa350292b4b7ccae67a",
  "B0xTo0x": "0x8726c7414ac023d23348326b47af3205185fd035",
  "B0xToken": "0x7bf7bb74c43dc141293aff12a2d7de350e9b09e0",
  "B0xVault": "0x6000eca38b8b5bba64986182fe2a69c57f6b5414",
  "EIP20": "",
  "OracleInterface": "",
  "OracleRegistry": "0x7e3f4e1deb8d3a05d9d2da87d9521268d0ec3239",
  "TestToken0": "0xe704967449b57b2382b7fa482718748c13c63190",
  "TestToken1": "0xa4b3e1659c473623287b2cc13b194705cd792525",
  "TestToken2": "0x2c530e4ecc573f11bd72cf5fdf580d134d25f15f",
  "TestToken3": "0x72d5a2213bfe46df9fbda08e22f536ac6ca8907e",
  "TestToken4": "0x2ebb94cc79d7d0f1195300aaf191d118f53292a8",
  "TestToken5": "0x5315e44798395d4a952530d131249fe00f554565",
  "TestToken6": "0xdff540fe764855d3175dcfae9d91ae8aee5c6d6f",
  "TestToken7": "0xc1be2c0bb387aa13d5019a9c518e8bc93cb53360",
  "TestToken8": "0xda54ecf5a234d6cd85ce93a955860834aca75878",
  "TestToken9": "0x33def1aa867be09809f3a01ce41d5ec1888846c9",
  "TokenRegistry": "0xca9717a4a6e8009b3518648c9f3e7676255471a1",
}
`;

exports[`addresses should return rinkeby testnet addresses for networkId 4 1`] = `
Object {
  "B0x": "0x66c529139ea5ff2f4e758c28fed902ef78ddf798",
  "B0xOracle": "0x2f498a9cd5f8a74ed579a95a5ab47f1bf9126bfa",
  "B0xTo0x": "0x3cb5ee86adcf8fc4301354b58fde01535939a3b5",
  "B0xToken": "0x14823db576c11e4a54ca9e01ca0b28b18d3d1187",
  "B0xVault": "0xbe46529e2f3208d35027c809ff1df173b022565d",
  "EIP20": "",
  "OracleInterace": "",
  "OracleRegistry": "0x81558e6edf0f7ae1222fd56ad63cffad09dadf64",
  "TokenRegistry": "0x0dadad008647f0f7b68ffe662135cd714a56698c",
  "TokenTransferProxy": "0x4e9aad8184de8833365fea970cd9149372fdf1e6",
  "WETH": "0xc778417e063141139fce010982780140aa0cd5ab",
  "ZRXToken": "0xa8e9fa8f91e5ae138c74648c9c304f1c75003a8d",
}
`;
